# baxter-coffee_maker

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: moveit_init.launch
scripts/: capture_pics.py  capture_pics_bg_img.py  test.py  try_to_move_baxter.py
